--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-svgr": "^3.3.0",
+    "vite-svg-loader": "^3.2.0"
   }
 }
